    via the output status variable.

    The following list of functions have been modified.

    * `copyfile`
    * `fcntl`
    * `fileattrib`
    * `kill`
    * `link`
    * `mkfifo`
    * `movefile`
    * `rename`
    * `rmdir`
    * `symlink`
    * `unlink`

### Graphics backend

- Support for Qt4 for graphics and the GUI has been removed.

### Matlab compatibility

- The function `griddata` now accepts 3-D inputs by passing data
directly to `griddata3`.

- Coordinate transformation functions `cart2sph`, `sph2cart`,
`cart2pol`, and `pol2cart` can now accept either row or column vectors
for coordinate inputs.  A single coordinate matrix with one variable per
column can still be used as function input, but a single output variable
will now contain just the first output coordinate, and will no longer
return the full output coordinate matrix.  Output size matches the
size of input vectors, or in the case of an input matrix will be column
vectors with rows corresponding to the input coordinate matrix.

### Alphabetical list of new functions added in Octave 7

* `rng`

### Deprecated functions and properties

The following functions and properties have been deprecated in Octave 7
and will be removed from Octave 9 (or whatever version is the second
major release after 7):

- Functions

  Function               | Replacement
  -----------------------|------------------
                         |

- Properties

  Object           | Property      | Value
  -----------------|---------------|------------
                   |               |

### Removed functions and properties

The following functions and properties were deprecated in Octave 5
and have been removed from Octave 7.

- Functions

  Function                 | Replacement
  -------------------------|------------------
  `output_max_field_width` | `output_precision`
  `is_keyword`             | `iskeyword`

- Properties

  Object           | Property      | Value
  -----------------|---------------|------------